# 42_ft_linear_regression

./: CMakeLists.txt  Makefile
srcs/: estimatePrice.cpp  estimatePrice.h  header.h  linearRegError.cpp  linearRegError.h  linearRegression.cpp  linearRegression.h  linearRegressionError.cpp  linearRegressionError.h  main.cpp  mainEstPrice.cpp  mainLinReg.cpp  plot.cpp  plot.h  plotPrediction.cpp  plotPrediction.h
